--- a/app/assets/styles/modules/_plans.scss
+++ b/app/assets/styles/modules/_plans.scss
@@ -1,3 +1,6 @@
+body{
+overflow-y: hidden;
+}
 .plans {
 	background-image: url("../images/Path 408.png");
 	background-size: contain;
@@ -5,10 +8,12 @@
 	object-fit: contain;
 	padding-top: 50px;
 	height: auto;
+	overflow-x: hidden;
 	.row {
 		background: $mainLightGreen;
 		align-items: center;
 		padding-top: 50px;
+		border-radius: 20px;
 	}
     .back_img{
 		background-image: url("../images/path 363.png");
@@ -31,6 +36,7 @@
 			padding-right: 1.5rem;
 			margin-bottom: 1rem;
 			color: #000;
+			font-size: 14px;
 
 			&::before {
 				position: absolute;
@@ -83,6 +89,7 @@
 	left: 22px;
 	bottom: -8px;
 }
+
 .innerTriangle{
 	position: absolute;
 	width: 0px;
@@ -108,73 +115,19 @@
 	border:0px;
 	padding: 95px 0px;
 }
-/** service section **/
 
-.service {
-	padding: 90px 0;
-	background: #fff;
+
+.item .card h5{
+	font-weight: bold;
+	font-size: 15px;
 }
-
-.service_box {
-	background: #fff;
-	text-align: center;
-	padding: 50px 20px 25px 20px;
-	border: #e9e9e9 solid 1px;
-	transition: ease-in all 0.5s;
-	margin-bottom: 30px;
+.item .card p{
+	font-weight: bold;
+	font-size: 12px;
 }
-
-.service_box h3 {
-	color: #070803;
-	font-size: 25px;
-	text-transform: uppercase;
-	line-height: 25px;
-	transition: ease-in all 0.5s;
+.item .card .img1{
+	position: relative;
 }
-
-.service_box p {
-	font-size: 17px;
-	line-height: 27px;
-	color: #2e2e2e;
-	transition: ease-in all 0.5s;
-}
-
-.service_box i {
-	padding-bottom: 10px;
-	display: block;
-}
-
-#hover_chang:hover.service_box {
-	background: #bc1939;
-	transition: ease-in all 0.5s;
-	border-radius: 20px;
-	cursor: pointer;
-	box-shadow: .25rem .25rem .25rem rgba(0, 0, 0, .3);
-	background: $mainLighterGreen;
-	transition-duration: 0.4s;
-	-webkit-box-shadow: 2px 10px 40px 1px rgba(0,0,0,0.5);  /* box shadow*/
-	-moz-box-shadow: 2px 10px 40px 1px rgba(0,0,0,0.5);
-	box-shadow: 2px 10px 40px 1px rgba(0,0,0,0.5);
-	margin-top: 10px;
-
-}
-
-#hover_chang:hover.service_box h3 {
-	color: #fff;
-	transition: ease-in all 0.5s;
-}
-
-#hover_chang:hover.service_box p {
-	color: #fff;
-	transition: ease-in all 0.5s;
-}
-
-.service .read_more {
-	margin: 0 auto;
-	display: block;
-	margin-top: 30px;
-}
-
 
 /** end service section **/
 /* */
@@ -195,7 +148,7 @@
 }
 .card h3{
 	font-weight: bold;
-	font-size:16px;
+	font-size:14px;
 }
 
 .box1{
@@ -207,3 +160,85 @@
 .box1:hover{
 background: #F4775C;
 }
+.plans .card .box1 .active{
+	background-color: #F4775C;
+	}
+.card .btn{
+	background-color: #F4775C;
+	border-radius: 20px;
+	border:0px;
+
+}
+
+.plans .card .btn:hover{
+	color: #F4775C;
+	background-color: #ffffff;
+	border-radius: 20px;
+	border:1px solid #F4775C;
+
+}
+.plans .card .active{
+	color: #ffffff;
+	background-color: #F4775C;
+	border-radius: 20px;
+	border:1px solid #F4775C;
+
+}
+
+.absoluteBg{
+		width: 100%;
+		height: auto;
+	position: absolute;
+	
+	}
+	.item .card{
+		border: 1px solid #cfcbcb;
+		border-radius: 10px;
+		width:90%;
+
+	}
+	.card .top-card{
+		background-image: url("../images/Base.png");
+		height: 170px;
+		padding: 5px;
+	}
+	.item .card img.card-icon{
+			width: 35px;
+			height: 35px;
+			display: flex;
+			margin: 0 auto;
+			margin-top:40px
+		}
+		.item .card img.rank-icon{
+			
+			width: 30px;
+			height: 30px;
+			display: flex;
+		}
+
+	.item .card:hover{
+			background:#F4775C;
+			transition: ease-in all 0.2s;
+			border-radius: 15px;
+			cursor: pointer;
+			box-shadow: .25rem .25rem .25rem rgba(0, 0, 0, .3);
+			transition-duration: 0.4s;
+			-webkit-box-shadow: 2px 10px 30px 1px rgba(0,0,0,0.5);  /* box shadow*/
+			-moz-box-shadow: 2px 10px 30px 1px rgba(0,0,0,0.5);
+			box-shadow: 2px 10px 30px 1px rgba(0,0,0,0.5);
+			margin-bottom: 40px;
+			color:#ffffff;
+			border: 0px;
+		
+		}
+		.item .card a{
+			background-color: #ffffffff;
+			color: #F4775C;
+			border:1px solid #F4775C;
+			margin-bottom: 20px;
+		}
+		#videos-section .title{
+			background-image: url("../images/airplane.gif");
+			background-size: cover;
+		
+		}
