--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -27,5 +27,6 @@
 
 // Lower global modules
 @import 'modules/modals.scss';
+@import 'modules/singlestory.scss';
 @import 'modules/footer';
 @import 'modules/search-overlay';
