--- a/app/assets/styles/modules/singlestory.scss
+++ b/app/assets/styles/modules/singlestory.scss
@@ -15,3 +15,13 @@
     color:#AAAAAA;
     font-size: 12px;
 }
+.titleSingle h2{
+    font-weight: bold;
+    text-align: right;
+    font-size: 30px;
+}
+.titleSingle a{
+    text-align: right;
+    font-size: 18px;
+    color:red;
+}
