--- a/app/assets/styles/modules/singlestory.scss
+++ b/app/assets/styles/modules/singlestory.scss
@@ -12,7 +12,7 @@
     font-weight: bold;
 }
 .breadcrumb li a{
-    color:#AAAAAA;
+    color:#f4775c;
     font-size: 12px;
 }
 .titleSingle h2{
@@ -28,5 +28,11 @@
 .row iframe {
     border-radius: 32px;
     width: 100%;
-    margin-top: 20px;
+}
+.titleSingle  .titleh3 h3{
+color:#000;
+text-align: center;
+margin-top: 20px;
+font-size: 25px;
+font-weight: bold;
 }
