--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -28,5 +28,6 @@
 // Lower global modules
 @import 'modules/modals.scss';
 @import 'modules/singlestory.scss';
+@import 'modules/profile.scss';
 @import 'modules/footer';
 @import 'modules/search-overlay';
