--- a/app/assets/styles/modules/singlestory.scss
+++ b/app/assets/styles/modules/singlestory.scss
@@ -60,3 +60,13 @@ font-weight: bold;
     text-align: center;
 
 }
+.stories-section__container:hover{
+    background-color: #F4775C;
+}
+.multiStory{
+    background-image: url("../images/feel.png");
+    background-repeat: no-repeat;
+    background-size:  cover;
+    padding: 50px;
+
+}
