--- a/app/assets/styles/modules/profile.scss
+++ b/app/assets/styles/modules/profile.scss
@@ -1,14 +1,18 @@
+.ProfilePage {
+    margin-top: 140px;
+}
 .ProfilePage .row .card{
   background: red;  
     
 }
 .ProfilePage  .row .card{
     box-shadow: 0 0 32px rgba(0, 0, 0, 0.11);
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #C9E8C4;
     padding:5px;
     text-align: right;
-    
+    height: 400px;
+    width: 95%;
   }
   .ProfilePage  .row .card .list-group li{
     background-color: #C9E8C4;
@@ -20,7 +24,7 @@
   }
 
   .ProfilePage  .row .card li a{
-    font-size: 16px;
+    font-size: 14px;
     color:#000;
   }
   .ProfilePage  .row .card li a:hover{
@@ -38,61 +42,50 @@
     
   }
 
-  .ProfilePage  .row  .tab-pane .card img{  
-   width: 100%;
-  height: 300px;
-}
-.ProfilePage   .desc a{
-font-weight: bold;
-color:#000;
-font-size: 16px;
-}
-.ProfilePage  .desc a:hover{
-color:#e33b3a;
-text-decoration: none;
-}
-.ProfilePage   .desc span{
-color:#e33b3a;
-}
-.ProfilePage  .product-wid-rating i{
-color:#999;
-font-size: 14px;
-}
-.ProfilePage .product-wid-rating i.active{
-color:#e33b3a;
-}
-.ProfilePage  .card-link{
-background: #e33b3a;
-color:#fff;
-padding: 6px 6px;
-
+  .ProfilePage  .profileUser {
+      display: flex;
+      margin: 0 auto;
+      width: 50%;
+      text-align: center;
+  }
+  .ProfilePage  .profileUser  img{  
+      width:150px;
+      height: 150px;
+      margin: 0 auto;
+      object-fit: contain;
 
 }
-.ProfilePage .card ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
+.ProfilePage .infoUser{
+    text-align: center;
+    color: #000;;
 }
-
-.ProfilePage  .cards-buy a{
-
-color:#fff;
-padding: 8px 14px;
-font-weight: 500;
-border-radius: 6px;
-font-size: 15px;
-color:#000;
-border: 1px solid #e5e2e2;
-
-
+.ProfilePage .infoUser h2{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
-.ProfilePage .cards-buy a:hover{
-text-decoration: none;
-background: #e33b3a;;
-color:#fff;
+.ProfilePage .infoUser h3{
+    text-align: center;
+    font-size: 16px;
 }
-/**/
+.ProfilePage .infoUser h4{
+    text-align: center;
+    font-size: 16px;
+}
+.ProfilePage .infoUser p{
+    text-align: center;
+    font-size: 12px;
+}
+.ProfilePage .editprofileUser{
+    text-align: center;
+}
+.ProfilePage .editprofileUser a{
+    text-decoration: underline;
+    font-size: 16px;
+}
+.ProfilePage .stories-section__item {
+    height: 200px;
+    background: #FFE7DD;
+    position: relative;
+    width: 100%;
+}
