--- a/app/assets/styles/modules/_navbar.scss
+++ b/app/assets/styles/modules/_navbar.scss
@@ -91,8 +91,8 @@
 	
 }
 .scrollNavbar{
-	background: #9e9c9b !important; 
-	color: #ffffff;
+	background: #f3f1f0 !important; 
+	color: #F4775C;
 
 }
 .navbar-brand__box img {
