--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -26,6 +26,7 @@
 @import 'modules/search-results';
 
 // Lower global modules
+@import 'modules/payment.scss';
 @import 'modules/modals.scss';
 @import 'modules/singlestory.scss';
 @import 'modules/profile.scss';
