--- a/app/assets/styles/modules/payment.scss
+++ b/app/assets/styles/modules/payment.scss
@@ -45,7 +45,16 @@
     color: #ffffff;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-weight: bold;
  
+}
+.paymentSection .btn {
+    background: linear-gradient(to right, #f4775c , #f1512d);
+    border-radius: 10px;
+    color:#ffffff;
+    margin-top: 60px;
+    height: 50px;
+    line-height: 37px;
 }
 h3.listeNow{
     font-size: 16px;
@@ -53,7 +62,7 @@ h3.listeNow{
 
 }
 .paymentSection h6.pay{
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
 
 }
@@ -87,7 +96,7 @@ h3.listeNow{
     border:1px solid #f4775c;
     color:#000000;
 }
-.paymentSection input:focus{
+.paymentSection .form-group input:focus{
  text-decoration: none;
 background: #fff;
 color: #f4775c;
@@ -141,3 +150,23 @@ outline: none;
 }
 
 /**/
+.form-check-input-reverse{
+    margin-left: 10px;
+   }
+ .paymentSection input[type=checkbox],  .paymentSection input[type=radio] {
+    box-sizing: border-box;
+    padding: 0;
+    float: left;
+}
+.paymentSection .form-check label{
+    font-size: 14px;
+}
+.paymentSection .form-check label a{
+    font-size: 14px;
+    color:#f1512d;
+}
+.paymentSection .form-check input {
+    height: 20px;
+    width: 20px;
+}
+   
