--- a/app/assets/styles/modules/_plans.scss
+++ b/app/assets/styles/modules/_plans.scss
@@ -61,56 +61,7 @@ overflow-y: hidden;
 
 
 
-.speechBulbble{
-	width: 100%;
-	border: 1px solid #e0e0e0;
-	height: auto;
-	max-height: 210px;
-	padding: 30px;
-	position: relative;
-	transition-duration: 0.6s;
-}
-.speechBulbble p{
-	font-style: italic;
-	color: #808080;
-	font-size: 18px;
-	height:auto;
-	max-height: 112px;
-	overflow: hidden;
-}
 
-.triangle{
-	position: absolute;               /* drow style of this section*/
-	width: 0px;
-	height: 0px;
-	border-left: 8px solid transparent;       /* css tricks*/
-	border-right: 8px solid transparent;
-	border-top: 8px solid #e0e0e0;
-	left: 22px;
-	bottom: -8px;
-}
-
-.innerTriangle{
-	position: absolute;
-	width: 0px;
-	height: 0px;
-	border-left: 7px solid transparent;
-	border-right: 7px solid transparent;
-	border-top: 7px solid #ffffff;
-	top: -8px;
-	left: -7px;
-}
-.testimonialItem:hover > .speechBulbble{
-	transition-duration: 0.4s;
-	-webkit-box-shadow: 2px 10px 40px 1px rgba(0,0,0,0.5);  /* box shadow*/
-	-moz-box-shadow: 2px 10px 40px 1px rgba(0,0,0,0.5);
-	box-shadow: 2px 10px 40px 1px rgba(0,0,0,0.5);
-}
-.testimonialItem:hover > .testimonialDesc{
-	margin-top:40px;
-	transition-duration: 0.4s;
-
-}
 .testimonialSection{
 	border:0px;
 	padding: 95px 0px;
@@ -382,21 +333,22 @@ background: #F4775C;
     
     .client-info {
       background-color: #c9e8c4;
-      padding: 20px;
+      padding: 10px;
       border-radius: 30px;
-      width: 80%;
       margin: 0 auto;
 
       h3 {
         color: #000;
         font-weight: 600;
         margin-bottom: 4px;
+        font-size: 20px;
 
       }
       p {
         color: #F4775C;
         font-weight: bold;
         text-transform: uppercase;
+        font-size: 16px;
       }
     }
     
@@ -596,4 +548,10 @@ background: #F4775C;
       .testi-wrap {
         height: 550px;
       }
+    }
+    #testimonial-area .childs{
+      width:100%;
+      margin: 0 auto;
+      width: 100%;
+      padding: 20px;
     }
