--- a/app/assets/styles/modules/_footer.scss
+++ b/app/assets/styles/modules/_footer.scss
@@ -84,11 +84,14 @@
 	font-size: 16px;
 	color: #fffdff;
 }
+.subscribeForm{
+	margin-top:30px;
+}
 .subscribeInput{
 	border-radius: 10px;
 	height: 40px;
-	background: #f8f8f8;
-	border:0px;
+	background: #363636;
+	border:1px solid #ffffffff;
 	padding: 0px 10px 0px 28px;
 }
 .subscribeForm{
@@ -135,13 +138,8 @@
 	font-size: 12px;
 }
 @media (max-width: 992px) {   /* responsive mobiles and small devicess*/
-	.subscribeBtn{
-		left: 0px;
-		right: 0px;
-		float: left;
-
-	}
-	.footer_black{
-		padding-top:150px;
-	}
+	
+	.item .card{
+        margin:0 auto;
+      }
 }
