--- a/app/assets/styles/modules/_contact.scss
+++ b/app/assets/styles/modules/_contact.scss
@@ -21,5 +21,11 @@
 }
 .about .page-banner__title{
 	margin-top:200px;
+	color:#f4775c;
 }
-.contact{margin-top:100px;}
+.contact .page-banner__title{
+	margin-top:200px;
+	color:#f4775c;
+}
+
+.contact{margin-top:50px;}
