--- a/app/assets/styles/modules/_showcase.scss
+++ b/app/assets/styles/modules/_showcase.scss
@@ -39,7 +39,6 @@
 				height: 100%;
 				position: absolute;
 				transform: translate(-50%, -50%);
-				margin-top: 3.5rem;
 			}
 		}
 	}
@@ -51,6 +50,10 @@
 			width: 100% !important;
 			height: 100% !important;
 			object-fit: cover;
+
+			@include responsive(atMedium) {
+				margin-top: 3.5rem !important;
+			}
 		}
 	}
 
