Changing owl carousel to swiper slider

--- a/backups/_plans-backup2.scss
+++ b/backups/_plans-backup2.scss
@@ -73,17 +73,17 @@ body {
 }
 
 
-.item .card h5 {
+.swiper-slide .card h5 {
 	font-weight: bold;
 	font-size: 15px;
 }
 
-.item .card p {
+.swiper-slide .card p {
 	font-weight: bold;
 	font-size: 12px;
 }
 
-.item .card .img1 {
+.swiper-slide .card .img1 {
 	position: relative;
 }
 
@@ -158,10 +158,9 @@ body {
 
 }
 
-.item .card {
+.swiper-slide .card {
 	border: 1px solid #cfcbcb;
 	border-radius: 10px;
-	// width: 90%;
 
 }
 
@@ -171,7 +170,7 @@ body {
 	padding: 5px;
 }
 
-.item .card img.card-icon {
+.swiper-slide .card img.card-icon {
 	width: 35px;
 	height: 35px;
 	display: flex;
@@ -179,14 +178,14 @@ body {
 	margin-top: 40px
 }
 
-.item .card img.rank-icon {
+.swiper-slide .card img.rank-icon {
 
 	width: 30px;
 	height: 30px;
 	display: flex;
 }
 
-.item .card:hover {
+.swiper-slide .card:hover {
 	background: #F4775C;
 	transition: ease-in all 0.2s;
 	border-radius: 15px;
@@ -203,11 +202,11 @@ body {
 
 }
 
-.item .card a {
+.swiper-slide .card a {
 	background-color: #ffffffff;
 	color: #F4775C;
 	border: 1px solid #F4775C;
-	margin-bottom: 20px;
+	// margin-bottom: 20px;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
@@ -632,6 +631,13 @@ body {
 
 }
 
+#testimonial-area .childs {
+	width: 100%;
+	margin: 0 auto;
+	width: 100%;
+	padding: 20px;
+}
+
 .plans .col-md-4 .card {
 	margin-top: -75px;
 	border-radius: 20px;
@@ -639,7 +645,9 @@ body {
 }
 
 @media (max-width: 992px) {
-	.item .card {
+	/* responsive mobiles and small devicess*/
+
+	.swiper-slide .card {
 		margin: 0 auto;
 	}
 }
