--- a/app/assets/styles/modules/_videos.scss
+++ b/app/assets/styles/modules/_videos.scss
@@ -1,32 +1,5 @@
 .videos {
-	.swiper-slide {
-		display: flex;
-		border-radius: .5rem;
-		transition: transform .3s ease-in, box-shadow .3s ease-in;
-
-		&:hover {
-			box-shadow: .25rem .25rem .25rem rgba(0, 0, 0, .3);
-			transition-duration: 0.4s;
-			box-shadow: 2px 10px 40px 1px rgba(0, 0, 0, 0.5);
-		}
-
-		a {
-			margin: auto;
-
-			img {
-				width: 50px !important;
-				height: 50px !important;
-			}
-		}
-
-		/* &--controls {
-			position: absolute;
-			content: '';
-			width: 50px;
-			height: 50px;
-			border-radius: 50%;
-			background: #FFF;
-			margin: auto;
-		} */
-	}
+	background-image: url('../images/airplane.gif');
+	background-position: top left !important;
+	width: 100%;
 }
