Fixing testimonials slider issues

--- a/app/assets/styles/modules/_videos.scss
+++ b/app/assets/styles/modules/_videos.scss
@@ -1,5 +1,1 @@
-.videos {
-	background-image: url('../images/airplane.gif');
-	background-position: top left !important;
-	width: 100%;
-}
+.videos {}
